--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,47 +1,34 @@
-# --- Core scientific stack ---
-pandas==2.3.3
-numpy==1.26.4
-scipy==1.16.2
-scikit-learn==1.7.2
-statsmodels==0.14.5
-matplotlib==3.10.7
-seaborn==0.13.2
+# --- Core runtime for Shiny on Posit/ShinyApps ---
+shiny>=0.9.0
+uvicorn>=0.29
+starlette>=0.37
 
-# --- Machine learning / optimization ---
-lightgbm==4.6.0
-optuna==4.1.0
-imbalanced-learn==0.12.4
-shap==0.44.1
-joblib==1.5.2
+# --- Data stack ---
+pandas
+numpy
+matplotlib
+joblib
+scikit-learn
+statsmodels
 
-# --- Async / DB / backend ---
-sqlalchemy==2.0.44
-psycopg2-binary==2.9.11
-asyncpg==0.30.0
-aiohttp==3.10.10
-aioredis==2.0.1
-alembic==1.13.2
-influxdb-client==1.45.0
-python-dotenv==1.0.1
-pydantic==2.9.2
+# --- DB / IO (쓰는 것만 남기세요) ---
+SQLAlchemy
+psycopg2-binary
+asyncpg
+influxdb-client
 
-# --- Web framework / Shiny / API ---
-shiny==1.5.0
-uvicorn==0.30.6
-shinywidgets==0.7.0
-shinylive==0.8.4
-plotly==6.3.1
+# --- Async / HTTP ---
+httpx
+aiohttp
 
-# --- Utility / monitoring ---
-prometheus-client==0.20.0
-sentry-sdk==2.19.0
-python-multipart==0.0.20
+# --- Config / Schema / Metrics ---
+python-dotenv
+pydantic
+prometheus-client
+sentry-sdk
 
-# --- Core dependencies ---
-typing_extensions==4.15.0
-packaging==25.0
-pytz==2025.2
-tzdata==2025.2
-six==1.17.0
-colorama==0.4.6
-decorator==5.2.1
+# --- ML extras (선택) ---
+optuna
+imbalanced-learn
+lightgbm
+shap
